<resources>

    <string name="app_name">Dishes</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="acount">输入账号</string>
    <string name="password">输入密码</string>
    <string name="rememberpassword">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="login">登录</string>
    <string name="regedit">注册</string>
    <string name="showenergy">今日能量：</string>
    <string name="netexception">网络异常</string>
    <string name="lastday">最后一天</string>
    <string name="firstday">第一天</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="supper">晚餐</string>
    <string name="healthdescribtion">健康描述</string>
    <string name="ingredient">用材</string>
    <string name="accessory">辅料</string>
    <string name="seasoning">调料</string>
    <string name="howtocook">做法</string>
    <string name="inputsearch">输入搜索内容···</string>
    <string name="defaultdesc">色香味美，口感宜人</string>
    <string name="loadingmore">加载中</string>
    <string name="loading">正在加载</string>
    <string name="taste">口味</string>
    <string name="caixi">菜系</string>
    <string name="process">工艺</string>
    <string name="choseningre">已选择食材：</string>
    <string name="choseningre_already">这个食材已经添加过了</string>
    <string name="choseningre_atmost">不能再添加更多食材了</string>
    <string name="what_to_eat">看看能吃啥</string>
    <string name="searchInfo">搜索内容不能为空</string>
    <string name="categorydishes">分类菜谱</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中···</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="myfavor">我的收藏</string>
    <string name="delete">删除</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>

</resources>