<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:hint="@string/acount"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_rp"
                android:layout_width="100dp"
                android:layout_height="28dp"
                android:text="@string/rememberpassword"
                android:textSize="15dp" />

            <CheckBox
                android:id="@+id/cb_al"
                android:layout_width="100dp"
                android:layout_height="28dp"
                android:text="@string/autologin"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_login"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_regedit"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/regedit" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>